--- a/server/frontend/static/style.css
+++ b/server/frontend/static/style.css
@@ -1,126 +1,128 @@
-img{
-  width: 60%;
-  align-self: center;
+/* Set default styles for all images */
+img {
+  max-width: 100%;
+  height: auto;
 }
 
-.card{
-  border: rgb(103, 102, 105) 3px solid;
-  display: flex;  
+/* Card styles */
+.card {
+  border: 3px solid rgb(103, 102, 105);
+  display: flex;
   flex-direction: column;
-  margin-left:5%;
-  margin-right:5%;
-  margin-top: 1%;
-  margin-bottom: 1%;
+  margin: 1% auto;
+  max-width: 80%;
+  padding: 20px;
+  background-color: #f9f9f9;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
 
-.row{
-  display: flex;  
-  flex: 1;
-  flex-direction: row;
-  margin: auto;
-  margin-top: 1%;
+/* Align the row */
+.row {
+  display: flex;
+  flex-wrap: wrap;
   justify-content: center;
-  padding:20px;
 }
 
-.container{
+/* Centralize content within the container */
+.container {
+  display: flex;
   justify-content: center;
+  align-items: center;
 }
-.details{
+
+/* Details style */
+.details {
   font-size: 20px;
   color: rgb(97, 64, 128);
-  padding:20px;
+  padding: 20px;
 }
 
-.title{
+/* Title style */
+.title {
   font-size: 20px;
-  background-color: rgb(97, 64, 128);
+  background-color: darkslategray;
   color: white;
   text-align: center;
-  margin:20px;
-  padding:5px;
+  margin: 20px;
+  padding: 5px;
 }
 
-.homepage_links{
-  color:  rgb(97, 64, 128);
-  padding: 25%;
+/* Homepage links style */
+.homepage_links {
+  color: rgb(97, 64, 128);
   font-size: larger;
-  }
+  padding: 0 25%;
+}
 
-.loginlink{
+/* Login link style */
+.loginlink {
   display: flex;
-  flex-direction: row;
   justify-content: flex-end;
 }
 
-.banner{
+/* Banner style */
+.banner {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  flex:1
 }
 
+/* Form panel style */
 .form_panel {
-  padding:2%;
-  display: flex;
-  flex-direction: column;
+  padding: 2%;
   border-radius: 50px;
-  text-align:center;
-  box-shadow: 2px 2px 2px 3px #999;
-  margin: auto;
-  min-width: 350px;
-  width: 80%;
-  margin-top:3%;
-  background-color: black;
+  text-align: center;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  margin: 3% auto;
+  max-width: 80%;
+  background-color: #f9f9f9;
 }
 
-.navitems{
+/* Navigation items style */
+.navitems {
   display: flex;
-  flex-direction: row;
   padding: 20px;
-  flex: 1;
   justify-content: flex-start;
-  justify-self: center;
 }
 
-.nav_item{
-  margin-left:15px;
+/* Navigation item style */
+.nav_item {
+  margin-left: 15px;
   font-size: 20px;
   color: black;
-  align-self: center;
 }
 
-.username{
-  font: 30px sans-serif;
-  color:black;
-  justify-content: 'flex-end';
-  align-self:flex-end;
-  vertical-align: middle;
+/* Username style */
+.username {
+  font-size: 30px;
+  color: black;
+  margin-left: auto;
 }
 
+/* Input panel style */
 .input_panel {
   display: flex;
-  flex-direction: row;
   padding: 20px;
-  flex: 1;
-  justify-content:flex-end;
+  justify-content: flex-end;
   align-items: flex-end;
-  vertical-align: middle;
 }
 
-.small_header{
-  font: 30px sans-serif;
-  color:black;
-  margin: .5cm;
+/* Small header style */
+.small_header {
+  font-size: 30px;
+  color: black;
+  margin: 0.5cm;
 }
 
+/* Image icon style */
 .img_icon {
+  width: 40px;
+  height: 40px;
+  background-color: #0C9;
+  color: #FFF;
+  border-radius: 50%;
+  text-align: center;
+  box-shadow: 2px 2px 3px #999;
   align-self: center;
-    width:40px;
-    background-color:#0C9;
-    color:#FFF;
-    border-radius:50px;
-    text-align:center;
-    box-shadow: 2px 2px 3px #999;  
 }
